# Ultimate-Skips

./: README.md  hazmatDetected.txt  package.xml  setup.cfg  setup.py
explorer-skips/: setup.py
install/: local_setup.sh  setup.sh
launch/: fake.launch.py  robot.launch.py
log/: latest_build
rviz/: turtlebot3.rviz
src/camara_python/: package.xml  setup.cfg  setup.py
src/camara_python/camara_python/: suscriber.py
src/explorer-skips/: left_wall_follower.py  package.xml  setup.cfg  setup.py
src/explorer-skips/config/: navigation.yaml  slam.yaml
src/explorer-skips/explorer-skips/: left_wall_follower.py
src/explorer-skips/launch/: exploration.launch.py
src/explorer-skips/turtlebot3_left_follower/: maze_escape_robot.py  nav_goal_sender.py  pledge_algorithm.py
src/explorer_skips/: README.md  package.xml  setup.cfg  setup.py
src/explorer_skips/config/: laser_filter.yaml  nav2_params.yaml  navigation.yaml  slam_localization.yaml  slam_mapping.yaml
src/explorer_skips/explorer_skips/: coverage_generator.py  explore.py  frontier_analyzer.py  landmark_marker.py  laser_scan_filter_node.py  left_wall_follower.py  map_converter.py  nav_goal_sender.py  random_exploration.py  wavefront_planner.py  wavefront_planning.py
src/explorer_skips/launch/: exploration.launch.py  laser_filter.launch.py  left_wall_exploration.launch.py  navigator.launch.py  random_exploration.launch.py
src/explorer_skips/maps/: map.pgm  map.yaml
src/explorer_skips/worlds/: map.pgm  map.sdf  map_world.world
src/stabilizer_skips/control_stabilizer/: control_stabilizer.ino
src/ultimate-skips/: README.md  setup.py
src/ultimate-skips/config/: hardware_controller_manager.yaml
src/ultimate-skips/launch/: robot.launch.py
src/ultimate-skips/ultimate_skips/: hello.py
src/ultimate-skips/urdf/: burger.gazebo.xacro  burger.urdf.xacro  (+2 more)
src/vision-skips/: package.xml  setup.cfg  setup.py
src/vision_skips/: package.xml  setup.cfg  setup.py
src/vision_skips/vision_skips/: camara_compressed_client.py  camara_compressed_server.py  landmark_navigator.py  stabilizer.sh  travel_to_hazmat.py
urdf/: ros2_control.xacro
vision-skips/camaravision/: package.xml
(+30 files in other folders)
